--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "egg": "^2.6.1",
     "egg-mongoose": "^3.3.0",
-    "egg-scripts": "^2.6.0",
-    "parameter": "^3.6.0"
+    "egg-scripts": "^2.6.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
