update: 忽略文件修正

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ logs/
 !.autod.conf.js
 
 test/**/*.ts
-typings/config/**/*.ts
 app/**/*.map
 test/**/*.map
 config/**/*.map
-typings/**/**/*.ts
+typings/**/*.ts
