--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "egg-scripts start --daemon --title=egg-server-sango-webapi",
     "stop": "egg-scripts stop --title=egg-server-sango-webapi",
     "dev": "egg-bin dev",
-    "debug": "egg-bin debug --port 9500",
+    "debug": "egg-bin debug --port 3000",
     "test-local": "egg-bin test",
     "test": "npm run lint -- --fix && npm run test-local",
     "cov": "egg-bin cov",
@@ -32,12 +32,13 @@
     "@types/supertest": "^2.0.0",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
-    "egg-ci": "^1.8.0",
     "egg-bin": "^4.11.0",
+    "egg-ci": "^1.8.0",
     "egg-mock": "^3.16.0",
-    "tslib": "^1.9.0",
+    "egg-validate": "^2.0.2",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "tslib": "^1.9.0",
     "typescript": "^3.0.0"
   },
   "engines": {
